@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export("?")
+export(batch)
 export(c2s)
 export(client)
 export(dev.curc)
